--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
 <app-about></app-about>
+<app-experience></app-experience>
+<app-education></app-education> 
+<app-hard-and-soft></app-hard-and-soft>
+<app-projects></app-projects>
