--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/aboutphoto.jpg" class="img-fluid" id="fotodeperfil">
+        <img src="{{person.urlImagen}}"  id="fotodeperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p id="nombre" >Pablo David Cabrera</p> 
+        <p id="nombre" >{{person.nombre}} {{person.apellido}}</p> 
         <p>Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
@@ -13,3 +13,6 @@
         </span>
     </div>
 </div> 
+
+
+
