--- a/portfolio/src/app/components/hard-and-soft/hard-and-soft.component.html
+++ b/portfolio/src/app/components/hard-and-soft/hard-and-soft.component.html
@@ -4,8 +4,11 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [title]="'HTML'"    
+        [imageSrc]="'../assets/html5-logo-14.png'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
@@ -19,8 +22,10 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [imageSrc]="'../assets/css-logo.png'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
@@ -34,8 +39,10 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [imageSrc]="'../assets/js-logo.png'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
@@ -49,8 +56,10 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [imageSrc]="'../assets/logo-java-2048.png'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
@@ -64,8 +73,10 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [imageSrc]="'../assets/logo_eeuu.jpg'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
@@ -79,8 +90,10 @@
     <circle-progress
         [percent]="85"
         [radius]="100"
-        [title]="'Tiro'"
-        [titleFontSize]="'3em'"
+        [imageSrc]="'../assets/team_work_logo.jpg'"
+        [showImage]="true"
+        [imageHeight]="75"
+        [imageWidth]="75"
         [showUnits]="false"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
