--- a/portfolio/src/app/components/logo/logo.component.html
+++ b/portfolio/src/app/components/logo/logo.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="container">
         <div class="logo">
-            <img src="../../../assets/shaco.jpg" id="logo">
+            <img src="../../../assets/APLogo-20-20.png" id="logo">
         </div>
         <div class="redes">
-            <a href=""> <img src="../../../assets/logogh.png" id="github"> </a>
-            <a href=""> <img src="../../../assets/logoin.png" id="linkedin"> </a>
+            <a href="https://github.com/PCBlack3?tab=repositories"> <img src="../../../assets/logogh.png" id="github"> </a>
+            <a href="https://linkedin.com/in/pablo-cabrera-74128b220"> <img src="../../../assets/logoin.png" id="linkedin"> </a>
             <button type="button" class="btn btn-dark">Login</button>
         </div>
         
