--- a/portfolio/src/app/components/logo/logo.component.css
+++ b/portfolio/src/app/components/logo/logo.component.css
@@ -3,15 +3,13 @@
     justify-content: space-between;
     flex-direction: row;
 }
-.logo {
-    width: 50px;
-}
-
 img{
     width: 50px;
 }
 
-
+.logo img{
+    width: 100px;
+}
 
 @media (max-width: 575px){
     .container{
