--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -1,13 +1,16 @@
 <div class="row">
-    <h1>Experiencia laboral</h1>
-    <div class="col-lg-1"></div>
+    <h1>Experiencia laboral</h1> 
+    <div class="col-lg-1">
+        <button class="btn btn-success">Agregar</button>
+        <button class="btn btn-dark">Editar</button>   
+    </div>
     <div class="col-lg-11">
         <ul>
             <li>
-                <h2>Trabajo destino 1</h2> 
-                <h3>tiempo:</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore natus nemo delectus magnam ut possimus, id nulla quasi iusto neque aliquam dolore vero minima debitis doloremque eaque voluptatum adipisci iste.</p>
-                <h2>Trabajo destino 2</h2> <h3>tiempo:</h3>
+                <h2>Trabajo destino 1</h2> <button class="btn btn-danger">Eliminar</button><br>
+                <h3>Descripción</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem placeat id, ipsa rerum distinctio quisquam hic pariatur cum unde assumenda animi tempore, accusamus ut cupiditate voluptates quas, nesciunt quaerat?</p>
+                <h2>Trabajo destino 2</h2> <button class="btn btn-danger">Eliminar</button><br>
+                <h3>Descripción</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem placeat id, ipsa rerum distinctio quisquam hic pariatur cum unde assumenda animi tempore, accusamus ut cupiditate voluptates quas, nesciunt quaerat?</p>
             </li>
         </ul>
     </div>
