--- a/portfolio/src/app/components/education/education.component.html
+++ b/portfolio/src/app/components/education/education.component.html
@@ -1,19 +1,52 @@
 <div class="row">
     <h1>Educación</h1>
     <div class="col-lg-1">
-        <button class="btn btn-success">Agregar</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#editarModal">Agregar</button>
         <button class="btn btn-dark">Editar</button> 
+        
+        <div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 id="tituloVentana">Agregar Estudios</h5>
+                        <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form [formGroup]="newForm">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Título</label>
+                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Descripción</label>
+                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                </div>
+                            </form>
+                            
+                        </div> 
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success" type="button" (click)="postForm(newForm.value)" data-bs-dismiss="modal"> Agregar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg-11">
         <ul *ngFor="let education of education">
             <li>
-                <h3> Título: </h3>  {{ education.title }} <button class="btn btn-danger">Eliminar</button><br>
+                <h3> Título: </h3>  {{ education.title }} <button class="btn btn-danger" (click)="deleteById(education.id)">Eliminar</button><br>
                 <h3> Descripción: </h3> {{ education.description}}
                 
             </li>
         </ul>
     </div>
+    
 </div>
 
 
