--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -1,17 +1,56 @@
 <div class="row">
     <h1>Experiencia laboral</h1> 
     <div class="col-lg-1">
-        <button class="btn btn-success">Agregar</button>
-        <button class="btn btn-dark">Editar</button>   
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addExperienceModal">Agregar</button>
+        <button class="btn btn-dark">Editar</button> 
+        
+        <div class="modal fade" id="addExperienceModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 id="tituloVentana">Agregar Experiencia Laboral</h5>
+                        <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form [formGroup]="newForm">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Título</label>
+                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Período</label>
+                                    <input type="text" class="form-control" placeholder="Período" formControlName="period" >
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Descripción</label>
+                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                </div>
+                            </form>
+                            
+                        </div> 
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success" type="button" (click)="postForm(newForm.value)" data-bs-dismiss="modal"> Agregar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
     <div class="col-lg-11">
-        <ul>
-            <li>
-                <h2>Trabajo destino 1</h2> <button class="btn btn-danger">Eliminar</button><br>
-                <h3>Descripción</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem placeat id, ipsa rerum distinctio quisquam hic pariatur cum unde assumenda animi tempore, accusamus ut cupiditate voluptates quas, nesciunt quaerat?</p>
-                <h2>Trabajo destino 2</h2> <button class="btn btn-danger">Eliminar</button><br>
-                <h3>Descripción</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem placeat id, ipsa rerum distinctio quisquam hic pariatur cum unde assumenda animi tempore, accusamus ut cupiditate voluptates quas, nesciunt quaerat?</p>
-            </li>
-        </ul>
+        <div class="col-lg-11">
+            <ul *ngFor="let experience of experience">
+                <li>
+                    <h3> Título: </h3>  {{ experience.title }} <button class="btn btn-danger" (click)="deleteById(experience.id)">Eliminar</button><br>
+                    <h3> Período: </h3> {{ experience.period}} <br>
+                    <h3> Descripción: </h3> {{ experience.description}}
+                    
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
