--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -12,7 +12,8 @@
     text-align:justify;
 }
 
-.img-project{
-    box-shadow: 10px 10px 30px #000000;
-    box-shadow: ejeX ejeY difumasion color;
+.img{
+    width:auto;
+    
 }
+
