--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,16 +1,56 @@
 <div class="row">
-    <h1>Proyectos realizados</h1>
-    <div class="container">
-        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h1>Crud Personas</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid veritatis provident tenetur, nisi voluptates impedit pariatur quae! Quae rerum nulla labore quod sunt sed, temporibus, provident cum culpa accusamus alias.</p>
+    <h1>Projectos Realizados</h1> 
+    <div class="col-lg-1">
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProjectModal">Agregar</button>
+        <button class="btn btn-dark">Editar</button> 
+        
+        <div class="modal fade" id="addProjectModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 id="tituloVentana">Agregar Projectos</h5>
+                        <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form [formGroup]="newForm">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Título</label>
+                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                </div>                               
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Descripción</label>
+                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Imagen</label>
+                                    <input type="text" class="form-control" placeholder="Url de Imagen" formControlName="urlImage" >
+                                </div>
+                            </form>
+                            
+                        </div> 
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success" type="button" (click)="postForm(newForm.value)" data-bs-dismiss="modal"> Agregar</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <h1>Lista de Compras</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, est sunt amet ex delectus, soluta consectetur enim aperiam ipsam facere repellendus dolorem autem vel voluptatum. Ut, quas asperiores! Sint, corrupti.</p>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4 offset-md-1 offset-lg-1 parte2">
-            <img src="" class="img-fluid img-project">
+    </div>
+
+    <div class="col-lg-11">
+        <div class="col-lg-11">
+            <ul *ngFor="let project of project">
+                <li>
+                    <h3> Título: </h3>  {{ project.title }} <button class="btn btn-danger" (click)="deleteById(project.id)">Eliminar</button><br>
+                    <h3> Período: </h3> {{ project.description}} <br>
+                    <img src="{{project.urlImage}}" >
+                    
+                </li>
+            </ul>
         </div>
     </div>
 </div>
