try add login 1

--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -13,7 +13,11 @@
 }
 
 .img{
-    width:auto;
-    
+    max-width:100%;
+    height:auto;    
 }
 
+#my_image{
+    max-width:100%;
+    height:auto; 
+}
