--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -2,7 +2,7 @@
     <h1>Experiencia laboral</h1> 
     <div class="col-lg-1">
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addExperienceModal">Agregar</button>
-        <button class="btn btn-dark">Editar</button> 
+        
         
         <div class="modal fade" id="addExperienceModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -47,7 +47,44 @@
                 <li>
                     <h3> Título: </h3>  {{ experience.title }} <button class="btn btn-danger" (click)="deleteById(experience.id)">Eliminar</button><br>
                     <h3> Período: </h3> {{ experience.period}} <br>
-                    <h3> Descripción: </h3> {{ experience.description}}
+                    <h3> Descripción: </h3> {{ experience.description}} <button class="btn btn-primary" (click)="editById(experience.id)" data-bs-toggle="modal" data-bs-target="#editExperienceModal">Edit</button><br>
+
+                    <div class="modal fade" id="editExperienceModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 id="tituloVentana">Editar Experiencia Laboral</h5>
+                                    <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    
+                                </div>
+                                <div class="modal-body">
+                                    <div class="container">
+                                        <form [formGroup]="editForm">
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Título</label>
+                                                <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                            </div>    
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Período:</label>
+                                                <input type="text" class="form-control" placeholder="Desde / Hasta :" formControlName="period" >
+                                            </div>                           
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Descripción</label>
+                                                <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                            </div>
+                                        
+                                        </form>
+                                        
+                                    </div> 
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-success" type="button" (click)="postForm(editForm.value)" data-bs-dismiss="modal"> Guardar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     
                 </li>
             </ul>
