--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -2,7 +2,7 @@
     <h1>Projectos Realizados</h1> 
     <div class="col-lg-1">
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProjectModal">Agregar</button>
-        <button class="btn btn-dark">Editar</button> 
+        
         
         <div class="modal fade" id="addProjectModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -46,7 +46,44 @@
             <ul *ngFor="let project of project">
                 <li>
                     <h3> Título: </h3>  {{ project.title }} <button class="btn btn-danger" (click)="deleteById(project.id)">Eliminar</button><br>
-                    <h3> Descripción: </h3> {{ project.description}} <br>
+                    <h3> Descripción: </h3> {{ project.description}}  <button class="btn btn-primary" (click)="editById(project.id)" data-bs-toggle="modal" data-bs-target="#editProjectModal">Edit</button><br>
+
+                    <div class="modal fade" id="editProjectModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 id="tituloVentana">Editar Projecto</h5>
+                                    <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    
+                                </div>
+                                <div class="modal-body">
+                                    <div class="container">
+                                        <form [formGroup]="editForm">
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Título</label>
+                                                <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                            </div>                               
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Descripción</label>
+                                                <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="exampleFormControlInput1">Imagen</label>
+                                                <input type="text" class="form-control" placeholder="Url de Imagen" formControlName="urlImage" >
+                                            </div>
+                                        </form>
+                                        
+                                    </div> 
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-success" type="button" (click)="postForm(editForm.value)" data-bs-dismiss="modal"> Guardar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <img src="{{project.urlImage}}" id="my_image">
                 </li>
             </ul>
