--- a/portfolio/src/app/components/hard-and-soft/hard-and-soft.component.html
+++ b/portfolio/src/app/components/hard-and-soft/hard-and-soft.component.html
@@ -20,7 +20,7 @@
    </div>
    <div class="text center col-sm-4 col-md-4 col-lg-4">
     <circle-progress
-        [percent]="85"
+        [percent]="70"
         [radius]="100"
         [imageSrc]="'../assets/css-logo.png'"
         [showImage]="true"
@@ -37,7 +37,7 @@
    </div>
    <div class="text center col-sm-4 col-md-4 col-lg-4">
     <circle-progress
-        [percent]="85"
+        [percent]="75"
         [radius]="100"
         [imageSrc]="'../assets/js-logo.png'"
         [showImage]="true"
@@ -71,9 +71,9 @@
    </div>
    <div class="text center col-sm-4 col-md-4 col-lg-4">
     <circle-progress
-        [percent]="85"
+        [percent]="75"
         [radius]="100"
-        [imageSrc]="'../assets/logo_eeuu.jpg'"
+        [imageSrc]="'../assets/english.jpg'"
         [showImage]="true"
         [imageHeight]="75"
         [imageWidth]="75"
@@ -88,9 +88,9 @@
    </div>
    <div class="text center col-sm-4 col-md-4 col-lg-4">
     <circle-progress
-        [percent]="85"
+        [percent]="90"
         [radius]="100"
-        [imageSrc]="'../assets/team_work_logo.jpg'"
+        [imageSrc]="'../assets/teamwork.png'"
         [showImage]="true"
         [imageHeight]="75"
         [imageWidth]="75"
