--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -9,7 +9,8 @@
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mi</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus suscipit voluptate dolore sint doloremque, repellendus corporis molestias cumque? Dolores numquam earum minus consequuntur inventore sunt beatae quam quia adipisci harum.</p>
+            <b>Honesto Resilente Proactivo Paciente  Compañero</b>
+            <p>Bienvenido. El objeto de la muestra de este portfolio es producto del resultado de la capacitación llevada a cabo por Argentina Programa y del aprendizaje de este humilde servidor.</p>
         </span>
     </div>
 </div> 
