--- a/portfolio/src/app/components/education/education.component.html
+++ b/portfolio/src/app/components/education/education.component.html
@@ -19,11 +19,11 @@
                             <form [formGroup]="newForm">
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Título</label>
-                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                    <input type="text" class="form-control" placeholder="Título:" formControlName="title" >
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Descripción</label>
-                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                    <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                 </div>
                             </form>
                             
@@ -58,11 +58,11 @@
                                     <form [formGroup]="editForm">
                                         <div class="form-group">
                                             <label for="exampleFormControlInput1">Título</label>
-                                            <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                            <input type="text" class="form-control" placeholder="Título:" formControlName="title" >
                                         </div>                               
                                         <div class="form-group">
                                             <label for="exampleFormControlInput1">Descripción</label>
-                                            <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                            <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                         </div>
                                     
                                     </form>
