--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -19,7 +19,7 @@
                             <form [formGroup]="newForm">
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Título</label>
-                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                    <input type="text" class="form-control" placeholder="Empresa o Función:" formControlName="title" >
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Período</label>
@@ -27,7 +27,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Descripción</label>
-                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                    <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                 </div>
                             </form>
                             
@@ -64,7 +64,7 @@
                                         <form [formGroup]="editForm">
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Título</label>
-                                                <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                                <input type="text" class="form-control" placeholder="Título:" formControlName="title" >
                                             </div>    
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Período:</label>
@@ -72,7 +72,7 @@
                                             </div>                           
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Descripción</label>
-                                                <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                                <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                             </div>
                                         
                                         </form>
