--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -19,15 +19,15 @@
                             <form [formGroup]="newForm">
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Título</label>
-                                    <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                    <input type="text" class="form-control" placeholder="Título:" formControlName="title" >
                                 </div>                               
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Descripción</label>
-                                    <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                    <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Imagen</label>
-                                    <input type="text" class="form-control" placeholder="Url de Imagen" formControlName="urlImage" >
+                                    <input type="text" class="form-control" placeholder="Url de Imagen:" formControlName="urlImage" >
                                 </div>
                             </form>
                             
@@ -63,15 +63,15 @@
                                         <form [formGroup]="editForm">
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Título</label>
-                                                <input type="text" class="form-control" placeholder="Título" formControlName="title" >
+                                                <input type="text" class="form-control" placeholder="Título:" formControlName="title" >
                                             </div>                               
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Descripción</label>
-                                                <input type="text" class="form-control" placeholder="Descripción" formControlName="description" >
+                                                <input type="text" class="form-control" placeholder="Descripción:" formControlName="description" >
                                             </div>
                                             <div class="form-group">
                                                 <label for="exampleFormControlInput1">Imagen</label>
-                                                <input type="text" class="form-control" placeholder="Url de Imagen" formControlName="urlImage" >
+                                                <input type="text" class="form-control" placeholder="Url de Imagen:" formControlName="urlImage" >
                                             </div>
                                         </form>
                                         
