--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -1,6 +1,44 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="{{person.urlImagen}}"  id="fotodeperfil">
+          <img src="{{person.urlImagen}}"  id="fotodeperfil"><br><br><br>
+          <button id="editPhoto" (mouseenter)="editPerson()" (click)="editPerson()" data-bs-toggle="modal" data-bs-target="#editUserModal" ><img src="../../../assets/photo.svg"></button>
+
+          <div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 id="tituloVentana">Editar Usuario</h5>
+                        <button class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form [formGroup]="editForm">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Nombre</label>
+                                    <input type="text" class="form-control" placeholder="Nombre:" formControlName="nombre" >
+                                </div>                               
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Apellido</label>
+                                    <input type="text" class="form-control" placeholder="apellido:" formControlName="apellido" >
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Imagen de perfil</label>
+                                    <input type="text" class="form-control" placeholder="Url de imagen:" formControlName="urlImagen" >
+                                </div>
+                            
+                            </form>
+                            
+                        </div> 
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success" type="button" (click)="postForm(editForm.value)" data-bs-dismiss="modal"> Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre" >{{person.nombre}} {{person.apellido}}</p> 
