--- a/portfolio/src/app/components/footer/footer.component.html
+++ b/portfolio/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <footer>
         <p>Cabrera Pablo David | Argentina programa 2022</p>
-        <p>Ciudad Autónoma de buenos Aires - Argentina</p>
+        <p>Ciudad Autónoma de Buenos Aires - Argentina</p>
     </footer>
 
 </div>
