--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -40,11 +40,11 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" id="about2">
         <p id="nombre" >{{person.nombre}} {{person.apellido}}</p> 
         <p>Full Stack Developer Jr</p>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="about3">
         <span>
             <h1>Acerca de mi</h1>
             <b>Honesto Resilente Proactivo Paciente  Compañero</b>
