--- a/portfolio/src/app/components/experience/experience.component.css
+++ b/portfolio/src/app/components/experience/experience.component.css
@@ -14,3 +14,17 @@ h2,h3{
     margin-right: 15px;
 }
 
+#experience{
+    border-style: solid;
+    border-width: 5px;
+}
+
+
+
+#experience3{
+    border-style: transparent;
+    margin-bottom: 5px;
+    border-radius: 12px;
+    padding: 5px;
+    background-color: rgb(122 149 155);
+}
