--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -25,3 +25,17 @@
 #editButton{
     margin-right: 15px;
 }
+
+#project{
+    border-style: solid;
+    
+    border-width: 5px;
+}
+
+#project3{
+    border-style: transparent;
+    margin-bottom: 5px;
+    border-radius: 12px;
+    padding: 5px;
+    background-color: rgb(122 149 155);
+}
