--- a/portfolio/src/app/components/about/about.component.css
+++ b/portfolio/src/app/components/about/about.component.css
@@ -20,11 +20,11 @@ div{
 @media (min-width: 576px){
     #fotodeperfil{
         position: absolute;
-        width: 15%;
+        width: 150px;
         border-radius: 100%;
         box-shadow: 3px 3px 3px gray;
         left: 3%;
-        top: 505px;
+        top: 467px;
 
     }
 }
@@ -36,7 +36,7 @@ div{
         border-radius: 100%;
         box-shadow: 3px 3px 3px gray;
         left: 33%;
-        top: 585px;
+        top: 505px;
 
     }
 }
@@ -51,7 +51,7 @@ div{
     #editPhoto{
         position: absolute;
         left: 33%;
-        top: 585px;
+        top: 505px;
 
     }
 }
@@ -60,7 +60,7 @@ div{
     #editPhoto{
         position: absolute;
         left: 3%;
-        top: 505px;
+        top: 467px;
 
     }
 }
